--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,6 +49,7 @@ db.default.logStatements=true
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+applyEvolutions.default=true
 
 # Ebean configuration
 # ~~~~~
